# ImutSys

./: .gitignore  CMakeLists.txt  README.md  fastbuild.sh
include/: Copper.h  copper_bool.h  copper_make.h  copper_types.h  copper_utils.h
src/: Copper.c  copper_make.c
tests/: test_main.c  test_util.h
